# flamai-exp-tts-rest

./: app.py  pyproject.toml  runpod_app.py  structure
src/api/: handlers.py  models.py  routes.py
src/core/: process_manager.py  server_manager.py
src/services/: tts_service.py  tts_services.py
src/utils/config/: config.yaml  settings.py
src/utils/resources/: logger.py
tests/: conftest.py  test_api.py
